Update ,dht 11 lib added

--- a/platformio.ini
+++ b/platformio.ini
@@ -37,6 +37,10 @@ build_flags =
 	;build flags for SEN
 	-I src/SEN/inc
 	-I src/SEN/src
+	;********************************
+	;build flags for sensor libraries
+	-I src/SEN_LIB/DHT_11_LIB/inc
+	-I src/SEN_LIB/DHT_11_LIB/src
 	;build flags for COM
 	-I src/COM/inc
 	-I src/COM/src
