--- a/platformio.ini
+++ b/platformio.ini
@@ -39,8 +39,8 @@ build_flags =
 	-I src/SEN/src
 	;********************************
 	;build flags for sensor libraries
-	-I src/SEN_LIB/DHT_11_LIB/inc
-	-I src/SEN_LIB/DHT_11_LIB/src
+	; -I src/SEN_LIB/DHT_11_LIB/inc
+	; -I src/SEN_LIB/DHT_11_LIB/src
 	;build flags for COM
 	-I src/COM/inc
 	-I src/COM/src
