Update on measurement FSM and now we can retrive data from the sensor

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,9 +20,9 @@ lib_deps =
 
 ;********************************
 ; Debugging Configuration 
-; debug_tool = esp-prog
+debug_tool = jlink
+debug_init_break = tbreak setup
 ; upload_protocol = esp-prog
-; debug_init_break = tbreak setup
 ;********************************
 
 build_flags = 
@@ -41,6 +41,8 @@ build_flags =
 	;build flags for sensor libraries
 	; -I src/SEN_LIB/DHT_11_LIB/inc
 	; -I src/SEN_LIB/DHT_11_LIB/src
+	-I src/SEN_LIB/LM_35_LIB/inc
+	-I src/SEN_LIB/LM_35_LIB/src
 	;build flags for COM
 	-I src/COM/inc
 	-I src/COM/src
