Integrated Max thremocouple

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,6 +43,8 @@ build_flags =
 	; -I src/SEN_LIB/DHT_11_LIB/src
 	-I src/SEN_LIB/LM_35_LIB/inc
 	-I src/SEN_LIB/LM_35_LIB/src
+	-I src/SEN_LIB/MAX_THCPL/inc
+	-I src/SEN_LIB/MAX_THCPL/src
 	;build flags for COM
 	-I src/COM/inc
 	-I src/COM/src
